tests/NormalTests/paczka1/fuzzy1/32518917.err
Error in line 14: S631 S830 93,0
Error in line 9: 9Kb S830 74,8
Error in line 12: dXp2Pph3 S221 89,4
Error in line 18: dXp2Pph3 S631 74,0
Error in line 19: dXp2Pph3 S119 11,7
